feat: finální verze projektu, validace, export databáze a úprava README